# python-project-52

./: .gitignore  Makefile  README.md  database.sql  db.sqlite3  pyproject.toml
task_manager/: settings.py  urls.py
task_manager/home/: apps.py
task_manager/home/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/home/templates/: application.html  index.html
task_manager/labels/: views.py
task_manager/labels/templates/labels/: delete.html  index.html
task_manager/statuses/: tests.py  views.py
task_manager/statuses/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/templates/: delete.html  index.html
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/tasks/templates/tasks/: edit.html  index.html  new.html  task_filter.html  view.html
task_manager/templates/: application.html
task_manager/users/: forms.py  tests.py  views.py
task_manager/users/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/users/templates/: application.html
task_manager/users/templates/users/: edit.html
